--- a/src/pages/Profile.css
+++ b/src/pages/Profile.css
@@ -1,6 +1,6 @@
-footer {
+.footerStudent {
   position: absolute;
-  bottom: 0;
+  margin-top: 8%;
   width: 100%;
   height: 15vh;
   text-align: center;
@@ -10,7 +10,7 @@ footer {
 
 .divFormProfile {
   background-color: lightgray;
-  height: calc(100vh - 55px);
+  height: calc(125vh - 55px);
 }
 
 .form {
