--- a/src/pages/company/CompanyProfile.css
+++ b/src/pages/company/CompanyProfile.css
@@ -1,6 +1,23 @@
 #divForm {
   margin-top: 5%;
 }
+.form {
+  background-color: lightgray;
+}
+
+.footerCompany {
+  position: absolute;
+  bottom: 0;
+  width: 100%;
+  height: 15vh;
+  text-align: center;
+  background-color: rgb(111, 133, 205);
+  line-height: 1%;
+}
+
+.divFormProfileCompany {
+  height: calc(100vh - 55px);
+}
 
 #row {
   margin-bottom: 8%;
@@ -10,6 +27,6 @@
   margin-top: -5%;
 }
 
-.divInput {
+.divInputCompany {
   margin-left: 9%;
 }
