--- a/src/pages/admin/AdminDashboard.css
+++ b/src/pages/admin/AdminDashboard.css
@@ -5,9 +5,14 @@
 }
 
 .sidebar {
-    width: 250px;
+    width: 290px;
     height: 100%;
     background-color: #212529;
+}
+
+.content {
+    display: flex;
+    padding: 40px;
 }
 
 .title {
