--- a/src/components/forms/enterpriseRegisterForms/EnterpriseData.css
+++ b/src/components/forms/enterpriseRegisterForms/EnterpriseData.css
@@ -9,7 +9,7 @@
   margin: 2%;
 }
 
-.btn {
+.button-enterprise {
   background-color: black;
   color: rgb(255, 255, 255);
   font-weight: 500;
@@ -17,7 +17,7 @@
   width: 15%;
 }
 
-.btn:hover {
+.button-enterprise:hover {
   background-color: #719fed;
   color: black;
   font-weight: 500;
