--- a/src/components/forms/studetnRegisterForms/PersonalData.css
+++ b/src/components/forms/studetnRegisterForms/PersonalData.css
@@ -20,13 +20,13 @@
     height: 5vh;
   }
 
-  .btn {
+  .button-personal {
     background-color: black;
     color: rgb(255, 255, 255);
     font-weight: 500;
   }
   
-  .btn:hover {
+  .button-personal:hover {
     background-color: rgb(111, 133, 205);
     color: rgb(255, 255, 255);
     font-weight: 500;
