--- a/src/pages/company/jobPositions/DependencyRelationshipForm.css
+++ b/src/pages/company/jobPositions/DependencyRelationshipForm.css
@@ -1,17 +1,18 @@
-/* .titleDependency {
+.titleDependency {
   margin-top: 3%;
   text-align: center;
 }
 
 #rowDependency {
-  margin: -5%;
+  margin: -2%;
 }
 
-.labelDependency{
-    margin-right: 5%;
-    margin-top: -8%;
+.labelDependency {
+  margin-left: 25%;
+  margin-top: -15%;
+  margin-right: 25%;
 }
 
-#workingDay{
-    margin-right: 30%;
-} */
+#workingDay {
+  margin-right: 55%;
+}
