--- a/src/pages/company/CompanyProfile.css
+++ b/src/pages/company/CompanyProfile.css
@@ -1,5 +1,5 @@
 #divForm {
-  margin-top: 4.5%;
+  margin-top: 5%;
 }
 .form {
   background-color: lightgray;
@@ -16,7 +16,7 @@
 }
 
 .divFormProfileCompany {
-  height: calc(100vh - 55px);
+  height: calc(100vh - 20px);
 }
 
 #row {
@@ -24,11 +24,15 @@
 }
 
 #btnCompany {
-  margin-top: -5%;
+  margin-top: -2%;
 }
 
 .divInputCompany {
   margin-left: 9%;
+}
+
+.divInputRadio {
+  margin-right: 4.5%;
 }
 
 #row3 {
@@ -39,10 +43,10 @@
   margin-top: 2.8%;
 }
 
-.p-radio{
-  margin-bottom: 1px;
+.p-radio {
+  margin-bottom: 1%;
 }
 
-.col-md-12{
+.col-md-12 {
   margin-top: 7%;
 }
