General Styling reform of JobPositions component

--- a/src/pages/company/AddJobPosition.css
+++ b/src/pages/company/AddJobPosition.css
@@ -4,7 +4,7 @@
   width: 100%;
   height: 15vh;
   text-align: center;
-  background-color: rgb(111, 133, 205);
+  background-color: #719FED;
   line-height: 1%;
 }
 
