--- a/src/pages/student/JobPositions.css
+++ b/src/pages/student/JobPositions.css
@@ -2,7 +2,8 @@
     height: calc(100vh - 56px);
     display: flex;
     justify-content: center;
-    align-items: center;
+    align-items: flex-start;
+    background-color: #D3D3D3;
 }
 
 .main-card {
@@ -10,9 +11,9 @@
     flex-direction: column;
     justify-content: flex-start;
     width: 65%;
-    height: 65%;
+    height: 70%;
     background-color: white;
-    padding: 20px;
+    margin-top: 50px;
 }
 
 .search {
@@ -27,24 +28,54 @@
     justify-content: space-between;
     width: 100%;
     height: 100%;
-    padding: 20px 0;
 }
 
 .list {
-    padding: 0px 10px 0 0;
-    width: 45%;
-    overflow-y: auto;
+    height: 100%;
+    width: 40%;
+    margin: 0 20px;
+    padding: 0px;
+    display: flex;
+    flex-direction: column;
+}
+
+.list>h3 {
+    font-weight: 600;
+    margin: 20px 0;
+}
+
+.scrollable-jobPositions {
+    overflow-y: scroll;
 }
 
 .details {
-    width: 53.5%;
+    width: 60%;
+}
+
+.companyDetails {}
+
+.search {
+    display: flex;
+    justify-content: space-between;
+    border: 1px solid #ccc;
+}
+
+.icon-search {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding: 0 10px;
 }
 
 .search-filter {
-    width: 50%;
-    padding: 0 10px;
+    width: 100%;
+    padding: 5px;
     text-align: left;
-    margin: 0 10px;
+    border: none;
+}
+
+.search-filter:focus {
+    outline: none;
 }
 
 .apply-button {
@@ -59,10 +90,24 @@
     opacity: 0.95;
 }
 
-.card {
-    margin: 5px 0;
+.list-item {
+    border-radius: 0;
+    padding: 10px;
 }
 
-.card:hover {
+.list-item:hover {
     cursor: pointer;
+}
+
+.list-item>h5 {
+    font-size: 1.2rem;
+    font-weight: 600;
+    color: #719FED;
+}
+
+.list-item__text {
+    margin: 0;
+    padding: 0;
+    font-size: 0.9rem;
+    font-weight: 500;
 }
