--- a/src/pages/student/JobPositions.css
+++ b/src/pages/student/JobPositions.css
@@ -50,9 +50,22 @@
 
 .details {
     width: 60%;
+    padding: 20px;
 }
 
-.companyDetails {}
+.card-detail {
+
+}
+
+.card-detail__title {
+    display: flex;
+    justify-content: space-between;
+}
+
+.card-detail__title > h2 {
+    font-weight: 700;
+    color: #719FED;
+}
 
 .search {
     display: flex;
@@ -91,6 +104,7 @@
 }
 
 .list-item {
+    border-left: 1px solid #ccc;
     border-radius: 0;
     padding: 10px;
 }
