--- a/src/components/forms/studetnRegisterForms/UniversityData.css
+++ b/src/components/forms/studetnRegisterForms/UniversityData.css
@@ -12,12 +12,12 @@
 
 .divFormUniversity {
   background-color: lightgray;
-  
+  height: calc(120vh - 55px);
 }
 
 header {
   background-color: lightgray;
-  height: 0vh;
+  height: 1vh;
 }
 
 #btn {
