--- a/src/pages/student/JobPositions.css
+++ b/src/pages/student/JobPositions.css
@@ -39,7 +39,8 @@
     flex-direction: column;
 }
 
-.list>h3 {
+.list > h3 {
+    font-size: 1.6rem;
     font-weight: 600;
     margin: 20px 0;
 }
@@ -53,18 +54,28 @@
     padding: 20px;
 }
 
-.card-detail {
-
-}
-
 .card-detail__title {
     display: flex;
     justify-content: space-between;
 }
 
 .card-detail__title > h2 {
+    font-size: 1.4rem;
     font-weight: 700;
     color: #719FED;
+}
+
+.card-detail__body > .location {
+    display: flex;
+    align-items: center;
+}
+
+.card-detail__body > .location > p {
+    margin: 0;
+}
+
+.card-detail__body > div > span {
+    margin-right: 10px;
 }
 
 .search {
@@ -125,3 +136,62 @@
     font-size: 0.9rem;
     font-weight: 500;
 }
+
+
+/* Company */
+.student-detail {
+    display: flex;
+    flex-direction: column;
+    border-left: 3px solid #719FED;
+    padding-left: 10px;
+    margin-bottom: 10px;
+}
+
+.student-detail > .name {
+    font-size: 1rem;
+}
+
+.name > .text {
+    display: inline;
+    margin-right: 10px;
+}
+
+.name > span {
+    margin: 0 8px;
+    color:#40B3FF;
+    cursor: pointer;
+}
+
+.student-detail > .mail {
+    font-size: .8rem;
+}
+
+.students-list {
+    list-style: none;
+    padding: 0;
+}
+
+.icon {
+    position: relative;
+    display: inline-block;
+  }
+  
+  .icon .tooltiptext {
+    visibility: hidden;
+    width: 80px;
+    font-size: 0.6rem;
+    background-color: #ccc;
+    color: #fff;
+    text-align: center;
+    padding: 5px 0;
+    border-radius: 6px;
+   
+    position: absolute;
+    top: -10px;
+    right: -85px;
+    z-index: 1;
+  }
+  
+  .icon:hover .tooltiptext {
+    visibility: visible;
+  }
