--- a/src/pages/student/JobPositions.css
+++ b/src/pages/student/JobPositions.css
@@ -1,68 +1,68 @@
 .main {
-    height: calc(100vh - 56px);
-    display: flex;
-    justify-content: center;
-    align-items: center;
+  height: calc(100vh - 56px);
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
 .main-card {
-    display: flex;
-    flex-direction: column;
-    justify-content: flex-start;
-    width: 65%;
-    height: 65%;
-    background-color: white;
-    padding: 20px;
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-start;
+  width: 65%;
+  height: 65%;
+  background-color: white;
+  padding: 20px;
 }
 
 .search {
-    width: 100%;
-    height: 35px;
-    display: flex;
-    justify-content: space-between;
+  width: 100%;
+  height: 35px;
+  display: flex;
+  justify-content: space-between;
 }
 
 .job-positions {
-    display: flex;
-    justify-content: space-between;
-    width: 100%;
-    height: 100%;
-    padding: 20px 0;
+  display: flex;
+  justify-content: space-between;
+  width: 100%;
+  height: 100%;
+  padding: 20px 0;
 }
 
 .list {
-    padding: 0px 10px 0 0;
-    width: 45%;
-    overflow-y: auto;
+  padding: 0px 10px 0 0;
+  width: 45%;
+  overflow-y: auto;
 }
 
 .details {
-    width: 53.5%;
+  width: 53.5%;
 }
 
 .search-filter {
-    width: 50%;
-    padding: 0 10px;
-    text-align: left;
-    margin: 0 10px;
+  width: 50%;
+  padding: 0 10px;
+  text-align: left;
+  margin: 0 10px;
 }
 
 .apply-button {
-    height: 40px;
-    padding: 0px 25px;
-    background-color: #719FED;
-    color: white;
-    border: none;
+  height: 40px;
+  padding: 0px 25px;
+  background-color: #719fed;
+  color: white;
+  border: none;
 }
 
 .apply-button:hover {
-    opacity: 0.95;
+  opacity: 0.95;
 }
 
 .card {
-    margin: 5px 0;
+  margin: 5px 0;
 }
 
 .card:hover {
-    cursor: pointer;
+  cursor: pointer;
 }
