--- a/src/pages/student/Profile.css
+++ b/src/pages/student/Profile.css
@@ -13,6 +13,17 @@ header {
   height: 0vh;
 }
 
+.main-card {
+  box-shadow: rgba(50, 50, 93, 0.25) 0px 50px 100px -20px,
+    rgba(0, 0, 0, 0.3) 0px 30px 60px -30px,
+    rgba(10, 37, 64, 0.35) 0px -2px 6px 0px inset;
+}
+
+.card {
+  box-shadow: rgba(50, 50, 93, 0.25) 0px 50px 100px -20px,
+    rgba(0, 0, 0, 0.3) 0px 30px 60px -30px,
+    rgba(10, 37, 64, 0.35) 0px -2px 6px 0px inset;
+}
 .divFormProfile {
   background-color: lightgray;
   height: calc(195vh - 10px);
