--- a/src/components/forms/studetnRegisterForms/PersonalData.css
+++ b/src/components/forms/studetnRegisterForms/PersonalData.css
@@ -11,13 +11,24 @@
 }
 
 .divFormPersonal {
+  margin-top: -2%;
   background-color: lightgray;
-  height: calc(150vh - 55px);
+  height: calc(100vh - 50px);
 }
 
 header {
   background-color: lightgray;
   height: 1vh;
+}
+
+.footerStudentPersonal {
+  position: absolute;
+  margin-top: 4%;
+  width: 100%;
+  height: 15vh;
+  text-align: center;
+  background-color: rgb(111, 133, 205);
+  line-height: 1%;
 }
 
 .btn {
