--- a/src/pages/company/CompanyProfile.css
+++ b/src/pages/company/CompanyProfile.css
@@ -13,7 +13,7 @@
 
 .footerCompany {
   position: absolute;
-  bottom: 0;
+  margin-top: 3%;
   width: 100%;
   height: 15vh;
   text-align: center;
@@ -27,8 +27,9 @@ header {
 }
 
 .divFormProfileCompany {
+  margin-top: -2%;
   background-color: lightgray;
-  height: calc(140vh - 55px);
+  height: calc(110vh - 55px);
 }
 
 #row {
