--- a/src/pages/student/JobPositions.css
+++ b/src/pages/student/JobPositions.css
@@ -15,6 +15,12 @@
   padding: 20px;
 }
 
+.divJobPositions{
+  margin-top: -5%;
+  background-color: lightgray;
+  height: calc(90vh - 15px);
+}
+
 .search {
   width: 100%;
   height: 35px;
