--- a/src/pages/student/Profile.css
+++ b/src/pages/student/Profile.css
@@ -1,13 +1,3 @@
-.footerStudent {
-  position: absolute;
-  margin-top: 8%;
-  width: 100%;
-  height: 15vh;
-  text-align: center;
-  background-color: rgb(111, 133, 205);
-  line-height: 1%;
-}
-
 header {
   background-color: lightgray;
   height: 0vh;
@@ -20,22 +10,35 @@ header {
 }
 
 .card {
+  margin-left: 5%;
   box-shadow: rgba(50, 50, 93, 0.25) 0px 50px 100px -20px,
     rgba(0, 0, 0, 0.3) 0px 30px 60px -30px,
     rgba(10, 37, 64, 0.35) 0px -2px 6px 0px inset;
 }
+
 .divFormProfile {
+  margin-top: -3%;
   background-color: lightgray;
-  height: calc(195vh - 10px);
+  height: calc(125vh - 52px);
 }
 
 .formProfile {
-  margin-top: -6%;
+  margin-top: -10%;
   margin-left: 5%;
 }
 
 .form {
   margin-top: -5%;
+}
+
+.footerStudentProfile {
+  position: absolute;
+  margin-top: 4%;
+  width: 100%;
+  height: 15vh;
+  text-align: center;
+  background-color: rgb(111, 133, 205);
+  line-height: 1%;
 }
 
 #divFooter {
