--- a/src/pages/company/AddJobPosition.css
+++ b/src/pages/company/AddJobPosition.css
@@ -4,6 +4,7 @@
   width: 35%;
   background-color: white;
   margin-top: 40px;
+  box-shadow: rgb(50 50 93 / 25%) 0px 50px 100px -20px, rgb(0 0 0 / 30%) 0px 30px 60px -30px, rgb(10 37 64 / 35%) 0px -2px 0px 0px inset;;
 }
 
 .wrapper-addJobPosition > h3 {
