bug jobapply history

--- a/src/pages/student/JobPositions.css
+++ b/src/pages/student/JobPositions.css
@@ -49,6 +49,10 @@
     overflow-y: scroll;
 }
 
+.scrollable-JobApplies {
+    overflow-y: scroll;
+}
+
 .details {
     width: 60%;
     padding: 20px;
